// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tile ab huge 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 0.74,
        "paddingRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 45,
                "fontWeight": "400",
                "lineHeight": 45,
                "marginBottom": 5,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#696969",
                "flexWrap": "wrap",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 14,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginTop": 5,
              }
            }
          >
            <Text>
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    fill={true}
    style={
      Object {
        "flex": 0.26,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 0.56,
        "paddingRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 30,
                "fontWeight": "400",
                "lineHeight": 30,
                "marginBottom": 5,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#696969",
                "flexWrap": "wrap",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 14,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginTop": 5,
              }
            }
          >
            <Text>
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    fill={true}
    style={
      Object {
        "flex": 0.44,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab wide 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 1,
        "paddingRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 40,
                "fontWeight": "400",
                "lineHeight": 40,
                "marginBottom": 5,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#696969",
                "flexWrap": "wrap",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 14,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginTop": 5,
              }
            }
          >
            <Text>
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    fill={true}
    style={
      Object {
        "flex": 1,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;

exports[`tile ab without breakpoint should be like medium 1`] = `
<Link
  linkStyle={
    Object {
      "flex": 1,
      "flexDirection": "row",
      "paddingHorizontal": 10,
      "paddingVertical": 15,
    }
  }
  url="/article/123"
>
  <View
    style={
      Object {
        "flex": 0.56,
        "paddingRight": 20,
      }
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View>
        <View>
          <View
            style={
              Object {
                "marginBottom": 5,
              }
            }
          >
            <ArticleLabel
              color="#005B8D"
              isVideo={false}
              title="label"
            />
          </View>
          <Text
            accessibilityRole="header"
            aria-level="3"
            style={
              Object {
                "color": "#333333",
                "fontFamily": "TimesModern-Bold",
                "fontSize": 30,
                "fontWeight": "400",
                "lineHeight": 30,
                "marginBottom": 5,
              }
            }
          >
            This is tile headline
          </Text>
          <ArticleFlags
            flags={
              Array [
                Object {
                  "expiryTime": "2030-03-14T12:00:00.000Z",
                  "type": "EXCLUSIVE",
                },
              ]
            }
          />
          <Text
            numberOfLines={2}
            style={
              Object {
                "color": "#696969",
                "flexWrap": "wrap",
                "fontFamily": "TimesDigitalW04",
                "fontSize": 14,
                "lineHeight": 20,
                "marginBottom": 0,
                "marginTop": 5,
              }
            }
          >
            <Text>
              
              Senior ministers accused Labour today of trying to “frustrate and cancel Brexit” after the party announced plans to hijack Boris Johnson’s deal with amendments for a second referendum and customs union with the EU. Rishi Sunak, the chief secretary to the Treasury, warned that any attempt by MPs to add a customs union to the government’s Brexit deal would be “procedural tricks” intended to frustrate departure. His comments came as ministers announced that they planned to publish the legislation that would formally take Britain out of the European Union today. They will also apply to the Speaker to hold another so-called meaningful vote on the deal following Mr Johnson’s decision to comply with the Benn act, which forces the prime minister to request a Brexit
              ...
            </Text>
          </Text>
        </View>
      </View>
    </View>
  </View>
  <Image
    aspectRatio={0.6666666666666666}
    fill={true}
    style={
      Object {
        "flex": 0.44,
      }
    }
    uri="//www.thetimes.co.uk/imageserver/image/%2Fmethode%2Ftimes%2Fprod%2Fweb%2Fbin%2F5a14c64e-06db-11e9-abe2-4909b2eb0130.jpg?crop=1195%2C1792%2C747%2C0"
  />
</Link>
`;
